Remoção de index´s
Signed-off-by: Linces Marques <linces@gmail.com>

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="HTML5 Template" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Polygon - Responsive Multipurpose Landing Page</title>
+    <title>.: SoftArena :. - Página não encontrada</title>
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
@@ -182,7 +182,6 @@
                                 <ul class="sub-menu">
                                     <li class="menu-item"><a href="./maintenance.html">Maintenance</a></li>
                                     <li class="menu-item"><a href="./comingsoon.html">Coming Soon</a></li>
-                                    <li class="menu-item"><a href="./404.html">Error page</a></li>
                                 </ul>
                             </li>
                             <li class="menu-item"><a href="./faq.html">FAQ</a></li>
@@ -820,7 +819,7 @@
                     <div class="col-md-6 col-md-push-6 col-sm-5 col-sm-push-7 right">
                         <div class="pull-right">
                             <ul class="menu-social-small">
-                                <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="https://www.facebook.com/SoftArenasoft/"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="https://twitter.com"><i class="fa fa-twitter"></i></a></li>
                                 <li><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
                                 <li><a href="https://www.pinterest.com"><i class="fa fa-pinterest"></i></a></li>
