--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <!-- Meta -->
     <meta charset="utf-8">
     <meta name="keywords" content="HTML5 Template" />
-    <meta name="description" content="">
+    <meta name="description" content="SoftArena">
     <meta name="author" content="">
-    <title>Polygon - Responsive Multipurpose Landing Page</title>
+    <title>.: SoftArena :. Soluções Tecnplógicas</title>
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
@@ -400,8 +400,8 @@
                 <div class="row middle">
                     <div class="col-md-7 top-has-link">
                         <aside id="text-5" class="widget top-left widget_text">
-                            <div class="textwidget"><i class="pe-7s-phone"></i> Phone: 012 3456 789 &nbsp;&nbsp; &nbsp; &nbsp;
-                                <i class="pe-7s-mail-open"></i> info@yourwebsite.com
+                            <div class="textwidget"><!-- <i class="pe-7s-phone"></i> Phone: 012 3456 789 &nbsp;&nbsp; &nbsp; --> &nbsp;
+                                <i class="pe-7s-mail-open"></i> softarena@softarena.com.br
                             </div>
                         </aside>
                     </div>
