--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                     </ul>
                                     <!-- end product list -->
                                 </div>
-                                <span class="title-cart">My cart</span>
+                                <span class="title-cart">Meu carrinho</span>
                             </div>
                             <div class="social-menu top-has-link pull-left">
                                 <ul class="menu-social-small">
@@ -485,12 +485,6 @@
                                                 <li><a href="./index_creative_2.html">Home Creative 2</a></li>
                                                 <li><a href="./index_agency.html">Home Agency</a></li>
                                                 <li><a href="./index_agency_2.html">Home Agency 2</a></li>
-                                                <li><a href="./index-portfolio.html">Home Portfolio</a></li>
-                                                <li><a href="./index-portfolio-2.html">Home Portfolio 2</a></li>
-                                                <li><a href="./index-shop.html">Home Shop</a></li>
-                                                <li><a href="./index_blog_masonry.html">Home Blog Masonry</a></li>
-                                                <li><a href="./index_studio.html">Home Studio</a></li>
-                                                <li><a href="./index_minimalism.html">Home Minimalism</a></li>
                                             </ul>
                                         </li>
                                         <li class="menu-item menu-item-has-children mega-menu">
@@ -559,7 +553,7 @@
                                             </ul>
                                         </li>
                                         <li class="menu-item menu-item-has-children mega-menu">
-                                            <a href="./element_accordion.html">Elements</a>
+                                            <a href="./element_accordion.html">Elementos</a>
                                             <ul class="sub-menu">
                                                 <li>
                                                     <div class="mega-menu-content mega-menu-elements">
@@ -603,9 +597,9 @@
                                             <a href="./about-our-company.html">Pages</a>
                                             <ul class="sub-menu">
                                                 <li class="menu-level2">
-                                                    <a href="./about-our-company.html">About</a>
+                                                    <a href="./about-our-company.html">Sobre</a>
                                                     <ul class="sub-menu">
-                                                        <li><a href="./about-our-company.html">About our company</a></li>
+                                                        <li><a href="./about-our-company.html">Sobre nós</a></li>
                                                         <li><a href="./about-our-team.html">About our team</a></li>
                                                         <li><a href="./about-me.html">About Me</a></li>
                                                     </ul>
@@ -618,7 +612,7 @@
                                                     </ul>
                                                 </li>
                                                 <li class="menu-level2">
-                                                    <a href="./service-modern.html">Service</a>
+                                                    <a href="./service-modern.html">Serviços</a>
                                                     <ul class="sub-menu">
                                                         <li><a href="./service-modern.html">Service Modern</a></li>
                                                         <li><a href="./service-list.html">Service List</a></li>
