--- a/index.html
+++ b/index.html
@@ -416,15 +416,13 @@
                                     </ul>
                                     <!-- end product list -->
                                 </div>
-                                <span class="title-cart">Cesta </span>
+                                <span class="title-cart">Carrinho     </span>&nbsp;&nbsp;
                             </div>
                             <div class="social-menu top-has-link pull-left">
                                 <ul class="menu-social-small">
                                     <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="https://twitter.com"><i class="fa fa-twitter"></i></a></li>
                                     <li><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-                                    <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li>
-                                    <li><a href="http://instagram.com"><i class="fa fa-instagram"></i></a></li>
                                 </ul>
                             </div>
                         </div>
