--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                                     </ul>
                                     <!-- end product list -->
                                 </div>
-                                <span class="title-cart">Carrinho     </span>&nbsp;&nbsp;
+                                <span class="title-cart">Compras     </span>&nbsp;&nbsp;
                             </div>
                             <div class="social-menu top-has-link pull-left">
                                 <ul class="menu-social-small">
