--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="keywords" content="HTML5 Template" />
         <meta name="description" content="SoftArena">
         <meta name="author" content="">
-        <title>.: SoftArena :. Soluções Tecnplógicas</title>
+        <title>.: SoftArena :. Soluções Tecnológicas</title>
         <!-- Mobile Metas -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Favicon -->
