--- a/index.html
+++ b/index.html
@@ -1398,7 +1398,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widget">
                             <p><img src="images/logo-footer.png" alt=""></p>
-                            <p>Extremely clean in each code line, intensely awesome in every homepage, super easy to use, highly flexible with a lot of responsive features. Polygon has it all to do all!</p>
+                            <p>A loja Virtual SoftArena está apenas começando, e em poucos meses vocês poderão ver aqui uma transformação do e-commerce de softwares no Brasil. Através de parcerias com fabricantes nacionais, levaremos até nossos clientes excelentes oportunidades de negócios e grandes lançamentos exclusivos. Agora com o Softarena você terá a oportunidade de comprar com segurança muitos softwares desenvolvidos no Brasil ou traduzidos para o português, antes disponíveis no Superdownloads. Rápido, fácil e com preços acessíveis. SoftArena, a sua loja de softwares !!</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
@@ -1502,7 +1502,7 @@
                         </ul>
                     </div>
                     <div class="col-md-6 col-sm-7 right">
-                        &copy; Polygon Theme by surjithctly. All Right Reserved 2016.
+                        &copy; Desenvolvido por SoftArena. Todos os direitos reservados 2017.
                     </div>
                 </div>
             </div>
