--- a/index.html
+++ b/index.html
@@ -418,17 +418,16 @@
                                 data-count="0"></span></div>
                                 <div class="widget_shopping_cart_content">
                                     <ul class="cart_list product_list_widget ">
-                                        <li class="empty">No products in the cart.</li>
+                                        <li class="empty">Carrinho de compras vazio.</li>
                                     </ul>
                                     <!-- end product list -->
                                 </div>
-                                <span class="title-cart">Compras     </span>&nbsp;&nbsp;
+                                <span class="title-cart">Compras    </span>&nbsp;
                             </div>
                             <div class="social-menu top-has-link pull-left">
                                 <ul class="menu-social-small">
-                                    <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-                                    <li><a href="https://twitter.com"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
+                                    <li><a href="https://www.facebook.com/SoftArenasoft/"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="https://twitter.com/arena_soft"><i class="fa fa-twitter"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1398,14 +1397,14 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widget">
                             <p><img src="images/logo-footer.png" alt=""></p>
-                            <p>A loja Virtual SoftArena está apenas começando, e em poucos meses vocês poderão ver aqui uma transformação do e-commerce de softwares no Brasil. Através de parcerias com fabricantes nacionais, levaremos até nossos clientes excelentes oportunidades de negócios e grandes lançamentos exclusivos. Agora com o Softarena você terá a oportunidade de comprar com segurança muitos softwares desenvolvidos no Brasil ou traduzidos para o português, antes disponíveis no Superdownloads. Rápido, fácil e com preços acessíveis. SoftArena, a sua loja de softwares !!</p>
+                            <p>A loja Virtual SoftArena está apenas começando, e em poucos meses vocês poderão ver aqui uma transformação do e-commerce de softwares e games no Brasil. Através de parcerias com fabricantes nacionais e internacionais. Agora com o Softarena você terá a oportunidade de comprar com segurança muitos softwares desenvolvidos no Brasil ou traduzidos para o português. Rápido, fácil e com preços acessíveis. SoftArena, a sua loja de softwares!</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widget footer-contact">
                             <h5>Contact</h5>
                             <p><span class="pe-7s-call"></span>(61 2) 9251 5600</p>
-                            <p><span class="pe-7s-mail-open-file"></span>info@yourwebsite.com</p>
+                            <p><span class="pe-7s-mail-open-file"></span>softarena@softarena.com.br</p>
                             <p><span class="pe-7s-map-2"></span>No.200 Joseph, Canada 10020</p>
                             <p><span class="pe-7s-print"></span>(61 2) 9200 5700</p>
                         </div>
@@ -1494,11 +1493,9 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-5 left">
                         <ul class="menu-social-small">
-                            <li><a href="https://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="https://twitter.com"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li>
-                            <li><a href="http://instagram.com"><i class="fa fa-instagram"></i></a></li>
+                            <li><a href="https://www.facebook.com/SoftArenasoft/"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://twitter.com/arena_soft"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/lincesmarques/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                     <div class="col-md-6 col-sm-7 right">
