--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@
                         <div class="col-md-7 top-has-link">
                             <aside id="text-5" class="widget top-left widget_text">
                                 <div class="textwidget"><!-- <i class="pe-7s-phone"></i> Phone: 012 3456 789 &nbsp;&nbsp; &nbsp; --> &nbsp;
-                                <i class="pe-7s-mail-open"></i> softarena@softarena.com.br
+                                <i class="pe-7s-mail-open"></i>softarena@softarena.com.br
                             </div>
                         </aside>
                     </div>
                     <div class="col-md-5">
                         <div class="pull-right">
                             <div class="mini-cart pull-left">
-                                <div class="mini-cart__button" title="View your shopping cart"><span class="mini-cart-icon akshfsd"
+                                <div class="mini-cart__button" title="Veja seu carrinho de compras"><span class="mini-cart-icon akshfsd"
                                 data-count="0"></span></div>
                                 <div class="widget_shopping_cart_content">
                                     <ul class="cart_list product_list_widget ">
@@ -422,7 +422,7 @@
                                     </ul>
                                     <!-- end product list -->
                                 </div>
-                                <span class="title-cart">Compras    </span>&nbsp;
+                                <span class="title-cart">Compras   </span>&nbsp;
                             </div>
                             <div class="social-menu top-has-link pull-left">
                                 <ul class="menu-social-small">
