--- a/shop.html
+++ b/shop.html
@@ -11,7 +11,7 @@
     <meta name="keywords" content="HTML5 Template" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Polygon - Responsive Multipurpose Landing Page</title>
+    <title>.: SoftArena :. Soluções Tecnológicas</title>
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
@@ -1129,7 +1129,7 @@
                         </ul>
                     </div>
                     <div class="col-md-6 col-sm-7 right">
-                        &copy; Polygon Theme by surjithctly. All Right Reserved 2016.
+                        &copy; Desenvolvido por SoftArena. Todos os direitos reservados 2017.
                     </div>
                 </div>
             </div>
