--- a/404.html
+++ b/404.html
@@ -828,7 +828,7 @@
                         </div>
                     </div>
                     <div class="col-md-6 col-md-pull-6 col-sm-7 col-sm-pull-5 left">
-                        &copy; Polygon Theme by surjithctly. All Right Reserved 2016.
+                        &copy; Desenvolvido por SoftArena. Todos os direitos reservados 2017.
                     </div>
                 </div>
             </div>
