--- a/comingsoon.html
+++ b/comingsoon.html
@@ -13,7 +13,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Polygon - Responsive Multipurpose Landing Page</title>
+    <title>.: SoftArena :. Soluções Tecnológicas</title>
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
