--- a/header-11.html
+++ b/header-11.html
@@ -41,7 +41,7 @@
             <div class="mobile-menu">
                 <ul id="mobile-menu" class="menu">
                     <li class="menu-item menu-item-has-children">
-                        <a href="./index.html">Home</a><i class="sub-menu-toggle fa fa-angle-down"></i>
+                        <a href="./index.php">Home</a><i class="sub-menu-toggle fa fa-angle-down"></i>
                         <ul class="sub-menu">
                             <li class="menu-item"><a href="./index-corporate.html">Home Corporate 1</a></li>
                             <li class="menu-item"><a href="./index-corporate-2.html">Home Corporate 2</a></li>
@@ -394,7 +394,7 @@
             <div class="container container-full logo-social bg-white">
                 <div class="row">
                     <div class="col-md-3 col-xs-10 logo">
-                        <a href="./index.html"><img src="images/logo.png" alt="" /></a>
+                        <a href="./index.php"><img src="images/logo.png" alt="" /></a>
                     </div>
                     <div class="col-xs-2 hidden-md hidden-lg">
                         <i id="open-left" class="fa fa-navicon"></i>
@@ -418,7 +418,7 @@
                                 <div class="primary-menu pull-right">
                                     <ul id="primary-menu" class="menu">
                                         <li class="menu-item menu-item-has-children">
-                                            <a href="./index.html">Home</a>
+                                            <a href="./index.php">Home</a>
                                             <ul class="sub-menu">
                                                 <li><a href="./index-corporate.html">Home Corporate 1</a></li>
                                                 <li><a href="./index-corporate-2.html">Home Corporate 2</a></li>
