--- a/index_landing_2.html
+++ b/index_landing_2.html
@@ -46,7 +46,7 @@
             <div class="mobile-menu">
                 <ul id="mobile-menu" class="menu">
                     <li class="menu-item menu-item-has-children">
-                        <a href="./index.html">Home</a><i class="sub-menu-toggle fa fa-angle-down"></i>
+                        <a href="./index.php">Home</a><i class="sub-menu-toggle fa fa-angle-down"></i>
                         <ul class="sub-menu">
                             <li class="menu-item"><a href="./index-corporate.html">Home Corporate 1</a></li>
                             <li class="menu-item"><a href="./index-corporate-2.html">Home Corporate 2</a></li>
@@ -399,7 +399,7 @@
             <div class="container container-full">
                 <div class="row">
                     <div class="col-md-2 col-xs-10 logo logo-2">
-                        <a href="./index.html"><img src="images/logo.png" alt="" /></a>
+                        <a href="./index.php"><img src="images/logo.png" alt="" /></a>
                     </div>
                     <div class="col-xs-2 hidden-md hidden-lg">
                         <i id="open-left" class="fa fa-navicon"></i>
@@ -433,7 +433,7 @@
                                 <div class="primary-menu pull-right">
                                     <ul id="primary-menu" class="menu">
                                         <li class="menu-item menu-item-has-children">
-                                            <a href="./index.html">Home</a>
+                                            <a href="./index.php">Home</a>
                                             <ul class="sub-menu">
                                                 <li><a href="./index-corporate.html">Home Corporate 1</a></li>
                                                 <li><a href="./index-corporate-2.html">Home Corporate 2</a></li>
@@ -888,7 +888,7 @@
                              data-end="11500" style="z-index: 6; min-width: 608px; max-width: 608px; max-width: 74px; max-width: 74px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 100; color: rgba(102, 102, 102, 1.00);text-align:left;letter-spacing:0.06em;">Polygon's smart, modern and flexible framework is designed for businesses of all sizes
                             </div>
                             <!-- LAYER NR. 3 -->
-                            <a class="tp-caption Polygon-button-02 rev-btn " href="../features/page-builder-28-saved/index.html" target="_self" id="slide-33-layer-4"
+                            <a class="tp-caption Polygon-button-02 rev-btn " href="../features/page-builder-28-saved/index.php" target="_self" id="slide-33-layer-4"
                              data-x="['center','center','center','center']"
                              data-hoffset="['-36','-36','-112','-77']"
                              data-y="['middle','middle','middle','middle']"
@@ -913,7 +913,7 @@
                              data-end="11500" style="z-index: 7; white-space: nowrap; font-size: 12px; line-height: 12px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">WATCH VIDEO 
                                 </a>
                             <!-- LAYER NR. 4 -->
-                            <a class="tp-caption Polygon-button-01 rev-btn " href="../index.html" target="_self" id="slide-33-layer-5"
+                            <a class="tp-caption Polygon-button-01 rev-btn " href="../index.php" target="_self" id="slide-33-layer-5"
                              data-x="['center','center','center','center']"
                              data-hoffset="['171','171','92','86']"
                              data-y="['middle','middle','middle','middle']"
