--- a/element_dropcaps.html
+++ b/element_dropcaps.html
@@ -850,7 +850,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="footer-widget">
                             <p><img src="images/logo-footer.png" alt=""></p>
-                            <p>Extremely clean in each code line, intensely awesome in every homepage, super easy to use, highly flexible with a lot of responsive features. Polygon has it all to do all!</p>
+                            <p>Loja Virtual SoftArena, e-commerce de softwares e games no Brasil. Através de parcerias com fabricantes nacionais, internacionais e revendedores individuais válidados. Agora com o Softarena você terá a oportunidade de comprar com segurança muitos softwares, games, itens para games, cursos, templates, plugins e vetores dos melhores fornecedores do mercado . Rápido, fácil e com preços acessíveis!</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-6">
